Unhide scrollbar and fix border radius in the mobile view

--- a/src/styles.less
+++ b/src/styles.less
@@ -701,6 +701,10 @@ button.kanban-plugin__new-item-button {
   }
 }
 
+.is-mobile .kanban-plugin__item {
+  border-radius: 17px;
+}
+
 .kanban-plugin__item-content-wrapper {
   background: var(--background-primary);
 }
@@ -1670,17 +1674,6 @@ button.kanban-plugin__cancel-action-button {
 
 .kanban-plugin__placeholder[data-axis='vertical'] {
   width: 100%;
-}
-
-body:not(.native-scrollbars) .kanban-plugin__scroll-container::-webkit-scrollbar {
-  background-color: transparent;
-  width: 16px;
-  height: 16px;
-}
-
-body:not(.native-scrollbars) .kanban-plugin__scroll-container::-webkit-scrollbar-thumb {
-  border: 4px solid transparent;
-  background-clip: content-box;
 }
 
 .kanban-plugin__scroll-container {
